// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alerts page Should remove alert 1`] = `
<div>
  <main>
    <nav
      class="navbar navbar navbar-expand-lg navbar-light bg-white"
      id="appNav"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="/"
        >
          <div
            class="navbar-brand text-primary fw-bold"
          >
            C0D3
            <span
              class="isAdminBadge badge"
            >
               ADMIN 
            </span>
          </div>
        </a>
        <button
          aria-controls="basic-navbar-nav"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="text-center navbar-collapse collapse"
          id="basic-navbar-nav"
        >
          <div
            class="m-auto navbar-nav"
          >
            <a
              class="nav-item nav-link px-3 noUnderline"
              href="/curriculum"
            >
              Curriculum
            </a>
            <a
              class="nav-item nav-link px-3 noUnderline"
              href="https://github.com/garageScript/c0d3-app"
              rel="noopener noreferrer"
              target="_blank"
            >
              Repo
            </a>
            <a
              class="nav-item nav-link px-3 noUnderline"
              href="/docs/learn"
            >
              Learn
            </a>
            <a
              class="nav-item nav-link px-3 noUnderline"
              href="https://discord.gg/c0d3"
              rel="noopener noreferrer"
              target="_blank"
            >
              Community
            </a>
          </div>
          <div
            class="dropdown"
          >
            <div
              class="d-none d-lg-block"
            >
              <div
                aria-expanded="false"
                class="nav-user-toggle  dropdown-toggle"
                id="user_nav_toggle"
              >
                <div
                  class="text-uppercase bg-primary rounded-circle text-light user_info_image user-icon"
                >
                  A 
                </div>
                <span>
                  Fakeusername
                </span>
                <svg
                  aria-hidden="true"
                  class="octicon octicon-chevron-down"
                  fill="currentColor"
                  height="16"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12.78 6.22a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0L3.22 7.28a.75.75 0 011.06-1.06L8 9.94l3.72-3.72a.75.75 0 011.06 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
            <div
              class="d-lg-none"
            >
              <a
                class="dropdown-item dropdown-item"
                data-rr-ui-dropdown-item=""
                href="/admin/lessons"
              >
                Lessons
              </a>
              <a
                class="dropdown-item dropdown-item"
                data-rr-ui-dropdown-item=""
                href="/admin/users"
              >
                Users
              </a>
              <a
                class="dropdown-item dropdown-item"
                data-rr-ui-dropdown-item=""
                href="/admin/alerts"
              >
                Alerts
              </a>
              <a
                class="dropdown-item dropdown-item"
                data-rr-ui-dropdown-item=""
                href="/profile/fakeusername"
              >
                Profile
              </a>
              <a
                class="dropdown-item  dropdown-item"
                data-rr-ui-dropdown-item=""
                href="#"
                role="button"
                tabindex="0"
              >
                <span>
                  <div
                    class="light-button d-inline"
                  >
                    <button
                      class="btn border btn-light ms-2"
                      style="color: rgb(41, 41, 41);"
                    >
                      Logout
                    </button>
                  </div>
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="container-md container"
    >
      <div
        class="row mt-5"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center pt-5 pb-5"
          >
            <h1
              class="card-title h2 fw-bold mb-5 text-primary"
            >
              Alerts
            </h1>
            <p
              class="card-text"
            >
              Add new messages you want c0d3.com students to see or remove old and outdated alerts!
            </p>
          </div>
        </div>
      </div>
      <div
        class="row mt-5"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center pt-5 pb-5"
          >
            <h1
              class="card-title h2 fw-bold mb-5 text-primary"
            >
              Create New Alert
            </h1>
            <p
              class="card-text"
            >
              Make a new alert. Look at the preview to see if the alert looks and functions how you want it to!
            </p>
            <div
              class="row mb-4"
            >
              <div
                class="col-8 offset-2"
              >
                <div
                  class="mb-3"
                >
                  <div
                    class="alert d-flex justify-content-between mt-3 bg-primary text-white"
                    role="alert"
                  >
                    <div
                      class="d-flex gap-3"
                    >
                      <img
                        height="24"
                        src="/assets/curriculum/icons/icon-tip.svg"
                        width="24"
                      />
                       
                      
                    </div>
                    <button
                      class="alert-dismiss"
                      data-testid="dismiss-info"
                      role="dismiss"
                    >
                      <img
                        src="/assets/curriculum/icons/dismiss-info.svg"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="text-start"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="py-4 px-3 card shadow-sm col-12 align-items-stretch"
                    >
                      <div
                        class="p-0 card-body text-center align-self-start"
                      />
                      <div
                        class="text-start"
                      >
                        <div
                          class="d-flex flex-column mb-4"
                        >
                          <span
                            class="optionInfo__span"
                            data-testid="spantext0"
                          >
                            Text
                          </span>
                          <input
                            class="form-control optionInfo__input"
                            data-testid="input0"
                            placeholder=""
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="d-flex flex-column mb-4"
                        >
                          <span
                            class="optionInfo__span"
                            data-testid="spantype1"
                          >
                            Type
                          </span>
                          <div
                            class="d-none d-lg-block"
                          >
                            <div
                              class="dropdown"
                            >
                              <button
                                aria-expanded="false"
                                class="dropdown-toggle title title-none"
                                type="button"
                              >
                                info
                              </button>
                            </div>
                          </div>
                          <div
                            class="d-lg-none"
                          >
                            <div
                              class="text-center py-2 px-4"
                            >
                              <button
                                class="dropdown-item"
                                data-rr-ui-dropdown-item=""
                              >
                                info
                              </button>
                            </div>
                            <div
                              class="text-center py-2 px-4"
                            >
                              <button
                                class="dropdown-item"
                                data-rr-ui-dropdown-item=""
                              >
                                urgent
                              </button>
                            </div>
                          </div>
                        </div>
                        <div
                          class="d-flex flex-column mb-4"
                        >
                          <span
                            class="optionInfo__span"
                            data-testid="spanurl2"
                          >
                            Url
                          </span>
                          <input
                            class="form-control optionInfo__input"
                            data-testid="input2"
                            placeholder=""
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="d-flex flex-column mb-4"
                        >
                          <span
                            class="optionInfo__span"
                            data-testid="spanurlCaption3"
                          >
                            Urlcaption
                          </span>
                          <input
                            class="form-control optionInfo__input"
                            data-testid="input3"
                            placeholder=""
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="text-center align-self-start"
                      >
                        <button
                          class="btn borderless btn-primary"
                          style="color: rgb(255, 255, 255);"
                        >
                          Create New Alert
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row mt-5"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center pt-5 pb-5"
          >
            <h1
              class="card-title h2 fw-bold mb-5 text-primary"
            >
              Current Alerts
            </h1>
            <p
              class="card-text"
            >
              These alerts are what every students see when they are on their dashboard page.
            </p>
            <div
              class="row"
            >
              <div
                class="d-flex flex-column col-10"
              >
                <div
                  class="alert d-flex justify-content-between mt-3 bg-primary text-white"
                  role="alert"
                >
                  <div
                    class="d-flex gap-3"
                  >
                    <img
                      height="24"
                      src="/assets/curriculum/icons/icon-tip.svg"
                      width="24"
                    />
                    Set up your computer to submit challenges. 
                    <a
                      class="text-white noUnderline"
                      href="https://www.notion.so/JS-0-Foundations-a43ca620e54945b2b620bcda5f3cf672#b45ed85a95e24c9d9fb784afb7a46bcc"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      View Instructions
                    </a>
                  </div>
                  <button
                    class="alert-dismiss"
                    data-testid="dismiss-info"
                    role="dismiss"
                  >
                    <img
                      src="/assets/curriculum/icons/dismiss-info.svg"
                    />
                  </button>
                </div>
              </div>
              <div
                class="d-flex flex-column col-2 mt-3 justify-content-center"
              >
                <button
                  class="btn borderless btn-danger"
                  style="color: rgb(255, 255, 255);"
                >
                  Remove Alert
                </button>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="d-flex flex-column col-10"
              >
                <div
                  class="alert d-flex justify-content-between mt-3 alert-danger"
                  role="alert"
                >
                  <div
                    class="d-flex gap-3"
                  >
                    <img
                      height="24"
                      src="/assets/curriculum/icons/exclamation.svg"
                      width="24"
                    />
                    Please upgrade your CLI client by running npm update c0d3. 
                    
                  </div>
                  <button
                    class="alert-dismiss"
                    data-testid="dismiss-urgent"
                    role="dismiss"
                  >
                    <img
                      src="/assets/curriculum/icons/dismiss-urgent.svg"
                    />
                  </button>
                </div>
              </div>
              <div
                class="d-flex flex-column col-2 mt-3 justify-content-center"
              >
                <button
                  class="btn borderless btn-danger"
                  style="color: rgb(255, 255, 255);"
                >
                  Remove Alert
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer
      class="mt-5 fw-light text-center pb-5 text-muted"
    >
      © Copyright 2022 GarageScript
    </footer>
  </main>
</div>
`;

exports[`Alerts page Should remove alert 2`] = `
<div>
  <main>
    <nav
      class="navbar navbar navbar-expand-lg navbar-light bg-white"
      id="appNav"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="/"
        >
          <div
            class="navbar-brand text-primary fw-bold"
          >
            C0D3
            <span
              class="isAdminBadge badge"
            >
               ADMIN 
            </span>
          </div>
        </a>
        <button
          aria-controls="basic-navbar-nav"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="text-center navbar-collapse collapse"
          id="basic-navbar-nav"
        >
          <div
            class="m-auto navbar-nav"
          >
            <a
              class="nav-item nav-link px-3 noUnderline"
              href="/curriculum"
            >
              Curriculum
            </a>
            <a
              class="nav-item nav-link px-3 noUnderline"
              href="https://github.com/garageScript/c0d3-app"
              rel="noopener noreferrer"
              target="_blank"
            >
              Repo
            </a>
            <a
              class="nav-item nav-link px-3 noUnderline"
              href="/docs/learn"
            >
              Learn
            </a>
            <a
              class="nav-item nav-link px-3 noUnderline"
              href="https://discord.gg/c0d3"
              rel="noopener noreferrer"
              target="_blank"
            >
              Community
            </a>
          </div>
          <div
            class="dropdown"
          >
            <div
              class="d-none d-lg-block"
            >
              <div
                aria-expanded="false"
                class="nav-user-toggle  dropdown-toggle"
                id="user_nav_toggle"
              >
                <div
                  class="text-uppercase bg-primary rounded-circle text-light user_info_image user-icon"
                >
                  A 
                </div>
                <span>
                  Fakeusername
                </span>
                <svg
                  aria-hidden="true"
                  class="octicon octicon-chevron-down"
                  fill="currentColor"
                  height="16"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12.78 6.22a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0L3.22 7.28a.75.75 0 011.06-1.06L8 9.94l3.72-3.72a.75.75 0 011.06 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
            <div
              class="d-lg-none"
            >
              <a
                class="dropdown-item dropdown-item"
                data-rr-ui-dropdown-item=""
                href="/admin/lessons"
              >
                Lessons
              </a>
              <a
                class="dropdown-item dropdown-item"
                data-rr-ui-dropdown-item=""
                href="/admin/users"
              >
                Users
              </a>
              <a
                class="dropdown-item dropdown-item"
                data-rr-ui-dropdown-item=""
                href="/admin/alerts"
              >
                Alerts
              </a>
              <a
                class="dropdown-item dropdown-item"
                data-rr-ui-dropdown-item=""
                href="/profile/fakeusername"
              >
                Profile
              </a>
              <a
                class="dropdown-item  dropdown-item"
                data-rr-ui-dropdown-item=""
                href="#"
                role="button"
                tabindex="0"
              >
                <span>
                  <div
                    class="light-button d-inline"
                  >
                    <button
                      class="btn border btn-light ms-2"
                      style="color: rgb(41, 41, 41);"
                    >
                      Logout
                    </button>
                  </div>
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="container-md container"
    >
      <div
        class="row mt-5"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center pt-5 pb-5"
          >
            <h1
              class="card-title h2 fw-bold mb-5 text-primary"
            >
              Alerts
            </h1>
            <p
              class="card-text"
            >
              Add new messages you want c0d3.com students to see or remove old and outdated alerts!
            </p>
          </div>
        </div>
      </div>
      <div
        class="row mt-5"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center pt-5 pb-5"
          >
            <h1
              class="card-title h2 fw-bold mb-5 text-primary"
            >
              Create New Alert
            </h1>
            <p
              class="card-text"
            >
              Make a new alert. Look at the preview to see if the alert looks and functions how you want it to!
            </p>
            <div
              class="row mb-4"
            >
              <div
                class="col-8 offset-2"
              >
                <div
                  class="mb-3"
                >
                  <div
                    class="alert d-flex justify-content-between mt-3 bg-primary text-white"
                    role="alert"
                  >
                    <div
                      class="d-flex gap-3"
                    >
                      <img
                        height="24"
                        src="/assets/curriculum/icons/icon-tip.svg"
                        width="24"
                      />
                       
                      
                    </div>
                    <button
                      class="alert-dismiss"
                      data-testid="dismiss-info"
                      role="dismiss"
                    >
                      <img
                        src="/assets/curriculum/icons/dismiss-info.svg"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="text-start"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="py-4 px-3 card shadow-sm col-12 align-items-stretch"
                    >
                      <div
                        class="p-0 card-body text-center align-self-start"
                      />
                      <div
                        class="text-start"
                      >
                        <div
                          class="d-flex flex-column mb-4"
                        >
                          <span
                            class="optionInfo__span"
                            data-testid="spantext0"
                          >
                            Text
                          </span>
                          <input
                            class="form-control optionInfo__input"
                            data-testid="input0"
                            placeholder=""
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="d-flex flex-column mb-4"
                        >
                          <span
                            class="optionInfo__span"
                            data-testid="spantype1"
                          >
                            Type
                          </span>
                          <div
                            class="d-none d-lg-block"
                          >
                            <div
                              class="dropdown"
                            >
                              <button
                                aria-expanded="false"
                                class="dropdown-toggle title title-none"
                                type="button"
                              >
                                info
                              </button>
                            </div>
                          </div>
                          <div
                            class="d-lg-none"
                          >
                            <div
                              class="text-center py-2 px-4"
                            >
                              <button
                                class="dropdown-item"
                                data-rr-ui-dropdown-item=""
                              >
                                info
                              </button>
                            </div>
                            <div
                              class="text-center py-2 px-4"
                            >
                              <button
                                class="dropdown-item"
                                data-rr-ui-dropdown-item=""
                              >
                                urgent
                              </button>
                            </div>
                          </div>
                        </div>
                        <div
                          class="d-flex flex-column mb-4"
                        >
                          <span
                            class="optionInfo__span"
                            data-testid="spanurl2"
                          >
                            Url
                          </span>
                          <input
                            class="form-control optionInfo__input"
                            data-testid="input2"
                            placeholder=""
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="d-flex flex-column mb-4"
                        >
                          <span
                            class="optionInfo__span"
                            data-testid="spanurlCaption3"
                          >
                            Urlcaption
                          </span>
                          <input
                            class="form-control optionInfo__input"
                            data-testid="input3"
                            placeholder=""
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="text-center align-self-start"
                      >
                        <button
                          class="btn borderless btn-primary"
                          style="color: rgb(255, 255, 255);"
                        >
                          Create New Alert
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row mt-5"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center pt-5 pb-5"
          >
            <h1
              class="card-title h2 fw-bold mb-5 text-primary"
            >
              Current Alerts
            </h1>
            <p
              class="card-text"
            >
              These alerts are what every students see when they are on their dashboard page.
            </p>
            <div
              class="row"
            >
              <div
                class="d-flex flex-column col-10"
              >
                <div
                  class="alert d-flex justify-content-between mt-3 alert-danger"
                  role="alert"
                >
                  <div
                    class="d-flex gap-3"
                  >
                    <img
                      height="24"
                      src="/assets/curriculum/icons/exclamation.svg"
                      width="24"
                    />
                    Please upgrade your CLI client by running npm update c0d3. 
                    
                  </div>
                  <button
                    class="alert-dismiss"
                    data-testid="dismiss-urgent"
                    role="dismiss"
                  >
                    <img
                      src="/assets/curriculum/icons/dismiss-urgent.svg"
                    />
                  </button>
                </div>
              </div>
              <div
                class="d-flex flex-column col-2 mt-3 justify-content-center"
              >
                <button
                  class="btn borderless btn-danger"
                  style="color: rgb(255, 255, 255);"
                >
                  Remove Alert
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer
      class="mt-5 fw-light text-center pb-5 text-muted"
    >
      © Copyright 2022 GarageScript
    </footer>
  </main>
</div>
`;
